# neti_informational_system

./: .$entity_diagram.drawio.bkp  .$logic_diagram.drawio.bkp  .$logic_diagram.drawio.dtmp  .env  Cargo.toml  README.md  db.sql  docker-compose.yml  entity_diagram.drawio  logic_diagram.drawio  populate_db.sql  redis.conf
backend/: .env  Cargo.toml
backend/.bin/.shims/: leptosfmt  make  trunk
backend/.bin/rust-nightly/cargo-leptos/0.2.5/: .crates.toml  .crates2.json
backend/.bin/rust-nightly/cargo-make/0.37.5/: .crates.toml  .crates2.json
backend/.bin/rust-nightly/leptosfmt/0.1.18/: .crates.toml  .crates2.json
backend/.bin/rust-nightly/trunk/0.18.3/: .crates.toml  (+1 more)
backend/adapters/: Cargo.toml
backend/adapters/src/: access_token.rs  config.rs  hasher.rs  lib.rs  password_hasher.rs  person_repository.rs  pg.rs  refresh_token.rs  session_repository.rs  transaction_module.rs  user_repository.rs
backend/adapters/src/attestation/: mod.rs  model.rs
backend/adapters/src/class/: mod.rs
backend/adapters/src/class_kind/: mod.rs
backend/adapters/src/curriculum/: mod.rs  model.rs
backend/adapters/src/curriculum_module/: mod.rs
backend/adapters/src/discipline/: mod.rs
backend/adapters/src/passport/: mod.rs
backend/adapters/src/person/: mod.rs  models.rs
backend/adapters/src/student/: mod.rs  model.rs
backend/adapters/src/study_group/: mod.rs  models.rs
backend/adapters/src/subdivision/: mod.rs
backend/adapters/src/tag/: mod.rs  model.rs
backend/adapters/src/teacher/: mod.rs  model.rs
backend/adapters/src/university/: mod.rs  model.rs
backend/adapters/src/user/: mod.rs
backend/adapters/src/user_session/: mod.rs  model.rs
backend/app/: Cargo.toml
backend/app/src/: auth.rs  auth_service.rs  hasher.rs  lib.rs  macros.rs  outcome.rs  person_service.rs  ports.rs  session.rs  token.rs  user.rs  user_service.rs
backend/app/src/api/: auth_repository.rs  mod.rs  password_encoder.rs  session_repository.rs  token_manager.rs  transaction.rs  user_repository.rs
backend/app/src/attestation/: mod.rs
backend/app/src/auth/: mod.rs
backend/app/src/class/: repo.rs
backend/app/src/curriculum_module/: mod.rs  repo.rs
backend/app/src/discipline/: mod.rs  repo.rs
backend/app/src/passport/: mod.rs  number.rs  repo.rs
backend/app/src/person/: mod.rs  repo.rs  repository.rs  service.rs
backend/app/src/repositories/: mod.rs
backend/app/src/services/: auth.rs  mod.rs  session.rs  tokens.rs  user.rs
backend/app/src/session/: mod.rs  params.rs  repository.rs  seconds.rs  service.rs
backend/app/src/student/: mod.rs  repo.rs
backend/app/src/study_group/: mod.rs  repo.rs
backend/app/src/subdivision/: exceptions.rs  mod.rs  repo.rs  repositories.rs  service.rs
backend/app/src/tag/: mod.rs  repo.rs
backend/app/src/teacher/: mod.rs
backend/app/src/token/: mod.rs  service.rs
backend/app/src/university/: exceptions.rs  mod.rs  repo.rs  service.rs
backend/app/src/user/: mod.rs  repo.rs  repository.rs  service.rs
backend/app/src/user_session/: mod.rs
backend/data/: Cargo.toml
backend/data/src/: config.rs  lib.rs  pg.rs  transaction.rs
backend/data/src/adapters/: mod.rs
backend/di/: Cargo.toml
backend/di/src/: lib.rs
backend/di_macro/: Cargo.toml
backend/di_macro/src/: lib.rs
backend/infrastructure/: Cargo.toml
backend/infrastructure/src/: config.rs  env_config.rs  limited_str.rs  main.rs  pg.rs  state.rs
backend/infrastructure/src/adapters/: access_token_engine.rs  config.rs  mod.rs  person_repository.rs  session_repository.rs  user_repository.rs
backend/infrastructure/src/api/: auth.rs  mod.rs  user.rs
backend/infrastructure/src/auth/: check_role.rs  error.rs  mod.rs  roles.rs
backend/infrastructure/src/config/: env_config.rs  mod.rs
backend/infrastructure/src/db/: pg.rs
backend/infrastructure/src/handlers/: auth.rs  user.rs
backend/infrastructure/src/pg/: mod.rs  session_repository.rs  transaction.rs  user_repository.rs
backend/infrastructure/src/redis/: mod.rs
backend/infrastructure/src/security/: mod.rs  password_encoder.rs  token_manager.rs
backend/infrastructure/src/utils/: api_error.rs  api_result.rs  mod.rs  provide_di_container.rs  res_body.rs
backend/utils/: Cargo.toml
backend/utils/src/: outcome.rs
backend/utils/src/entity/: attr.rs  id.rs  method.rs
backend/utils/src/repo/: case.rs  ex.rs  mod.rs
backend/utils_macros/: Cargo.toml
backend/utils_macros/src/: entity.rs
backend/utils_macros/src/entity_method/: expand.rs  lifetime.rs  mod.rs
backend/web_api/: Cargo.toml
backend/web_api/src/: api_state.rs  main.rs
backend/web_api/src/config/: env_config.rs  mod.rs
backend/web_api/src/handlers/: auth.rs  curriculums.rs  mod.rs  persons.rs  study_groups.rs  subdivisions.rs  universities.rs  user.rs
backend/web_api/src/utils/: api_result.rs  mod.rs  provide_req_scope_module.rs  role_checkers.rs
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/api/src/entities/: attestations.rs  attestations_examiners.rs  class_kinds.rs  classes.rs  classes_teachers.rs  curriculums.rs  discipline_types.rs  disciplines.rs  mod.rs  person_sessions.rs  persons.rs  prelude.rs  sea_orm_active_enums.rs  students.rs  students_attestations.rs  study_groups.rs  study_groups_curriculums.rs  study_groups_students.rs  subdivision_attributes.rs  subdivision_members.rs  subdivisions.rs  subdivisions_attributes.rs  teachers.rs  universities.rs
crates/api/src/handlers/: mod.rs
crates/api/src/utils/: api_error.rs  json_with_rejection.rs  mod.rs  res.rs
crates_to_remove/models/lib_base/: Cargo.toml
crates_to_remove/models/lib_base/src/: lib.rs  result_mapper.rs
crates_to_remove/models/lib_base_derive/: Cargo.toml
crates_to_remove/models/lib_base_derive/src/: lib.rs
crates_to_remove/models/lib_models/: Cargo.toml
crates_to_remove/models/lib_models/src/: lib.rs  person.rs  subdivision.rs  university.rs
project/utils/: Cargo.toml
project/utils/src/: lib.rs  outcome.rs
project/utils/src/entity/: attr.rs  id.rs  mod.rs
project/utils/src/repo/: case.rs  ex.rs  mapper.rs  mod.rs  sqlx.rs
(+245 files in other folders)
