[workspace]
resolver = "2"

members = [
    "app",
    "utils",
    "utils_macros",
    "adapters",
    "web_api",
]

[workspace.dependencies]
# async-trait = { version = "0.1.73" }
# anyhow = { version = "1.0.75" }
# thiserror = { version = "1.0.49" }
# domain = { path = "../domain" }

[workspace.metadata.bin]
cargo-leptos = { version = "0.2.5", lock = true }
# trunk = { version = "0.18.3", locked = true }
leptosfmt = { version = "0.1.18", locked = true }

