[package]
name = "adapters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio = { version = "1.32.0", features = ["rt", "sync"] }
app = { path = "../app/" }
di = { path = "../di/" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107" }
jsonwebtoken = { version = "8.3.0" }
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "macros"] }
nanoid = { version = "0.4.0" }
argon2 = { version = "0.5.2", features = ["std", "alloc", "password-hash"] }
password-hash = { version = "0.5.0" }
rand = { version = "0.8.5", features = ["std_rng"] }
