[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
di = { path = "../di/" }
adapters = { path = "../adapters/" }
app = { path = "../app" }
tokio = { version = "1.32.0", features = ["full"] }
http = { version = "0.2.9" }
tower = { version = "0.4.13" }
tower-http = { version = "0.4.4", features = ["tracing", "trace"] }
hyper = { version = "0.14.27", features = ["full"] }
axum = { version = "0.6.20", features = ["http2", "tracing", "headers", "macros"] }
axum-extra = { version = "0.8.0", features = ["typed-routing"] }
tracing = { version = "0.1.37", features = ["attributes"] }
log = { version = "0.4.20", features = ["serde"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "tracing-log"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107" }
dotenv = { version = "0.15.0" }
envy = { version = "0.4.2" }
jsonwebtoken = { version = "8.3.0" }
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "macros"] }
nanoid = { version = "0.4.0" }
argon2 = { version = "0.5.2", features = ["std", "alloc", "password-hash"] }
password-hash = { version = "0.5.0" }
rand = { version = "0.8.5", features = ["std_rng"] }
