[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
sea-orm = { version = "0.12.6", features = ["debug-print", "runtime-tokio-native-tls", "sqlx-postgres"] }
axum = "0.7.1"
axum-macros = "0.4.0"
axum-extra = "0.9.0"
async-trait = "0.1.74"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs"] }
tower-cookies = "0.10.0"
anyhow = "1.0.75"
thiserror = "1.0.50"
dotenvy = "0.15.7"
serde = "1.0.193"
serde_json = "1.0.108"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# entity = { path = "../entity" }
# migration = { path = "../migration" }

[lints]
workspace = true
