[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.193"
utils_macros = { path = "../../project/utils_macros" }
anyhow = { version = "1.0.75" }
async-trait = { version = "0.1.73" }

# sqlx
sqlx = { version = "0.7", optional = true }
sea-query = { version = "0.30", optional = true }
sea-query-binder = { version = "0.5", optional = true }
modql = {version = "0.3.4", features = ["with-sea-query"], optional = true }

[features]
# default = ["sqlx-postgres"]
default = []
sqlx = ["dep:sqlx", "dep:sea-query", "dep:sea-query-binder", "dep:modql"]


# sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid" ] }
# sea-query = { version = "0.30" }
# sea-query-binder = { version = "0.5", features = ["sqlx-postgres" ] }
# modql = {version = "0.3.4", features = ["with-sea-query"]}

