[package]
name = "lib_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_base = { path = "../../../crates/models/lib_base" }
lib_common = { path = "../../../crates/lib_common" }

async-trait = "0.1.74"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
sea-query = { version = "0.30", features = ["derive", "attr"] }
sea-query-binder = { version = "0.5", features = ["sqlx-postgres", "with-time" ] }
anyhow = "1.0.75"
thiserror = "1.0.50"
modql = { version = "0.3.4", features = ["with-sea-query"] }

# tokio = { version = "1", features = ["full"] }
# # serde = { version = "1", features = ["derive"] }
# sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
# sea-query = { version = "0.30", features = ["derive", "attr"] }
# sea-query-binder = { version = "0.5", features = ["sqlx-postgres", "with-time" ] }
# modql = { version = "0.3.4", features = ["with-sea-query"] }
# # anyhow = "1.0.75"
# # thiserror = "1.0.50"

[lints]
workspace = true
